style/essential.css
/* ... */
table.calendarmonth.calendartable {
	background: #fff;
	box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
}

/* @end */

/* @group Alerts */

.useralerts [class^="fa-stack"] {
    float: left;
    vertical-align: middle;
    margin-right: 5px;
}

.useralerts .title {
    font-weight: bold;
    margin-right: 10px;
}

/* @end */

.back-to-top [class^="icon-"] {
    font-size: 3em;
}

.back-to-top{
    position: fixed;
    bottom: 2em;
    left: 50%;
    display: none;
    text-align:center; 
    font:11px/100%; 
    text-transform:uppercase; 
    text-decoration:none; 
}

.back-to-top p{
    margin-top: 5px;
}

.back-to-top:hover{
    text-decoration: none;
}

